--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -346,6 +346,9 @@
     <Filter Include="Shader\Application\Effect\LeadEffect">
       <UniqueIdentifier>{1cb795f1-e4bc-4d5a-afa4-c94ef0971f93}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader\Application\Effect\PlayerRecoveryEffect">
+      <UniqueIdentifier>{49227445-6a34-4a20-b13c-fcc4c7bba248}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -828,7 +831,7 @@
     <ClCompile Include="Application\SourceCode\Motion\BossAttack1Effect.cpp">
       <Filter>Application\Source\Effect</Filter>
     </ClCompile>
-    <ClCompile Include="IEffect.cpp">
+    <ClCompile Include="Application\SourceCode\Effect\IEffect.cpp">
       <Filter>Application\Source\Effect</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1611,6 +1614,15 @@
     </FxCompile>
     <FxCompile Include="Application\Shader\Effect\LeadEffect\LeadEffectUpdateCS.hlsl">
       <Filter>Shader\Application\Effect\LeadEffect</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\PlayerRecoveryEffect\PlayerRecoveryEffectVS.hlsl">
+      <Filter>Shader\Application\Effect\PlayerRecoveryEffect</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\PlayerRecoveryEffect\PlayerRecoveryEffectInitCS.hlsl">
+      <Filter>Shader\Application\Effect\PlayerRecoveryEffect</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\PlayerRecoveryEffect\PlayerRecoveryEffectUpdateCS.hlsl">
+      <Filter>Shader\Application\Effect\PlayerRecoveryEffect</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
